--- a/css/style.css
+++ b/css/style.css
@@ -40,17 +40,10 @@ tr:hover td.buttons{
 table tr .edit-box{
     width: 100%;
 }
-/*#alertBox{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index:1001;
-    -moz-opacity: 0.8;
-    opacity:.80;
-    filter: alpha(opacity=80);
-    transition: all 1s;
- }*/
 
+.alert.ng-enter,.alert.ng-leave{
+    animation:fadeIn 0.5s;
+}
+.alert.ng-leave{
+    animation: fadeOutUp 0.6s;
+}
