--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    margin-top: 20px;
+   // margin-top: 20px;
 }
 .formBox{
     position: relative;
@@ -24,6 +24,9 @@ body{
     animation: zoomInUp 0.7s;
 }
 
+th,tr,td{
+    text-align: center;
+}
 .formBox.ng-leave{
     animation: bounceOut 0.7s;
 }
@@ -46,4 +49,49 @@ table tr .edit-box{
 }
 .alert.ng-leave{
     animation: fadeOutUp 0.6s;
+}
+
+td>div>input{
+    display: block;
+    width: 100%;
+}
+#popUpMsg-bg {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 999;
+    overflow: hidden;
+    transition: all 0.5s
+}
+#popUpMsg-bg.ng-hide{
+    opacity: 0;
+}
+
+#popUpMsg-bg .content{
+    background: white;
+    position: relative;
+    top:100px;
+    left: 37%;
+    width:25%;
+    border-radius: 7px;
+    padding: 10px;
+    transition: top 0.7s;
+
+}
+#popUpMsg-bg.ng-hide .content{
+    top:50px;
+}
+
+body.no-scroll{
+
+    height: 100%;
+    overflow-y: hidden;
+    margin-left: -17px;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
 }
